--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ colorama==0.4.3
 cycler==0.10.0
 graphviz==0.14.1
 kiwisolver==1.2.0
-matplotlib==3.3.1
+matplotlib==3.2.0rc1
 numpy==1.19.1
 Pillow==7.2.0
 pymdptoolbox==4.0b3
