--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Custom stuff
 .idea/
 .ipynb_checkpoints/
-config.yaml
+src/slicing_core/config.yaml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
