--- a/src/slicing_core/config.yaml.example
+++ b/src/slicing_core/config.yaml.example
@@ -1,15 +1,128 @@
 # arrivals histogram
 # [X, Y] means P(in 0 jobs) = X; P(in 1 jobs) = Y
 arrivals_histogram:
-#  - 0.5
-#  - 0.5
-  - 0.15
-  - 0.1
-  - 0.2
-  - 0.25
-  - 0.2
-  - 0.1
+  - 0.0
+  - 0.027767735393160072
+  - 0.03680778953012132
+  - 0.08841172715233743
+  - 0.03663199554648885
+  - 0.022652624027291776
+  - 0.047648555107974506
+  - 0.11066955504136557
+  - 0.1475090844702287
+  - 0.03604077704713544
+  - 0.029266986613891217
+  - 0.04828721883480547
+  - 0.02088573096288054
+  - 0.03011801537620016
+  - 0.059682535747566635
+  - 0.0439455927255803
+  - 0.04034088546143491
+  - 0.09255172389428679
+  - 0.031596716542014465
+  - 0.024129910235969308
+  - 0.025054840289266626
 
+#- 0.0
+#- 0.027767735393160072
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.03680778953012132
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.08841172715233743
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.03663199554648885
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.022652624027291776
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.047648555107974506
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.11066955504136557
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.1475090844702287
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.03604077704713544
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.029266986613891217
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.04828721883480547
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.02088573096288054
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.03011801537620016
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.059682535747566635
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0439455927255803
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.04034088546143491
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.09255172389428679
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.031596716542014465
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.024129910235969308
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.0
+#- 0.025054840289266626
+#- 0.0
+#- 0.0
+#- 0.0
 
 # departures histogram
 # [X, Y] means P(out 0 jobs) = X; P(out 1 jobs) = Y
@@ -18,10 +131,10 @@ departures_histogram:
   - 1.
 
 # queue size is the max number of jobs waiting in the queue
-queue_size: 10
+queue_size: 2
 
 # server max cap represent the max cap of servers allocated in the slice
-server_max_cap: 10
+server_max_cap: 2
 
 # alpha is a parameter responsible for the cost normalization [job in queue]
 alpha: 1
@@ -42,13 +155,13 @@ c_job: 1
 c_lost: 1
 
 # simulations represent the number of sim to be done in order to get the average for the plots
-simulations: 1
+simulations: 5
 
 # simulation time (in timeslots) indicates timing for each simulation done
 simulation_time: 1000
 
 # mdp discount start value indicates the default value for the discount discovery routine
-mdp_discount_start_value: 0.8
+mdp_discount_start_value: 1.
 
 # mdp discount end value indicates the end value for the discount discovery routine
 mdp_discount_end_value: 1.
@@ -61,7 +174,7 @@ mdp_discount_increment: 0.1
 mdp_algorithm: fh
 
 # delayed action effect the behaviour of the mdp formulation and of the simulator too
-delayed_action: True
+delayed_action: False
 
 # max points in plot is useful when we have plot unreadable due the high number of sample to plot
 # this option define the window of the average window technique
