--- a/src/slicing_core/refactoring/config.yaml
+++ b/src/slicing_core/refactoring/config.yaml
@@ -3,9 +3,7 @@ arrival_processing_phase: True
 
 mdp:
   algorithm: fh
-  discount_factors:
-    - 0.899
-    - 0.999
+  discount_factor: 0.999
 
 simulation:
   runs: 1
@@ -31,16 +29,31 @@ slices:
 
   - name: slice-1
     arrivals_histogram:
-      - 0.
       - 0.5
       - 0.5
     server_capacity_histogram:
       - 0.
       - 1.
-    queue_size: 5
+    queue_size: 2
     alpha: 1
     beta: 1
     gamma: 1
     c_job: 1
     c_server: 1
     c_lost: 1
+
+#  - name: slice-1
+#    arrivals_histogram:
+#      - 0.
+#      - 0.5
+#      - 0.5
+#    server_capacity_histogram:
+#      - 0.
+#      - 1.
+#    queue_size: 5
+#    alpha: 1
+#    beta: 1
+#    gamma: 1
+#    c_job: 1
+#    c_server: 1
+#    c_lost: 1
