--- a/src/slicing_core/refactoring/config.yaml
+++ b/src/slicing_core/refactoring/config.yaml
@@ -9,10 +9,10 @@ simulation:
   runs: 1
   timeslots: 1000
 
-server_max_cap: 5
+server_max_cap: 1
 
 slices:
-  - name: slice-0
+  - name: slice-0 # TODO: capire che fare con name, non mi serve
     arrivals_histogram:
       - 0.5
       - 0.5
@@ -20,12 +20,27 @@ slices:
       - 0.
       - 1.
     queue_size: 2
-    alpha: 1
-    beta: 1
-    gamma: 1
-    c_job: 5
+    alpha: 0.333 # TODO: replace this with the old automatic system
+    beta: 0.333
+    gamma: 0.333
+    c_job: 1
     c_server: 1
-    c_lost: 10
+    c_lost: 1
+
+  - name: slice-1
+    arrivals_histogram:
+      - 0.5
+      - 0.5
+    server_capacity_histogram:
+      - 0.
+      - 1.
+    queue_size: 2
+    alpha: 0.333
+    beta: 0.333
+    gamma: 0.333
+    c_job: 1
+    c_server: 1
+    c_lost: 1
 
 #  - name: slice-1
 #    arrivals_histogram:
@@ -42,18 +57,18 @@ slices:
 #    c_server: 1
 #    c_lost: 10
 
-  - name: slice-1
-    arrivals_histogram:
-      - 0.
-      - 0.5
-      - 0.5
-    server_capacity_histogram:
-      - 0.
-      - 1.
-    queue_size: 5
-    alpha: 1
-    beta: 1
-    gamma: 1
-    c_job: 5
-    c_server: 1
-    c_lost: 10
+#  - name: slice-1
+#    arrivals_histogram:
+#      - 0.
+#      - 0.5
+#      - 0.5
+#    server_capacity_histogram:
+#      - 0.
+#      - 1.
+#    queue_size: 5
+#    alpha: 1
+#    beta: 1
+#    gamma: 1
+#    c_job: 5
+#    c_server: 1
+#    c_lost: 10
