--- a/src/slicing_core/config.yaml
+++ b/src/slicing_core/config.yaml
@@ -12,14 +12,13 @@ simulation:
 server_max_cap: 1
 
 slices:
-  - name: slice-0 # TODO: capire che fare con name, non mi serve
-    arrivals_histogram:
+  - arrivals_histogram:
       - 0.5
       - 0.5
     server_capacity_histogram:
       - 0.
       - 1.
-    queue_size: 2
+    queue_size: 1
     alpha: 0.333 # TODO: replace this with the old automatic system
     beta: 0.333
     gamma: 0.333
@@ -27,15 +26,14 @@ slices:
     c_server: 1
     c_lost: 1
 
-  - name: slice-1
-    arrivals_histogram:
+  - arrivals_histogram:
       - 0.
       - 0.5
       - 0.5
     server_capacity_histogram:
       - 0.
       - 1.
-    queue_size: 2
+    queue_size: 1
     alpha: 0.333
     beta: 0.333
     gamma: 0.333
@@ -43,33 +41,19 @@ slices:
     c_server: 1
     c_lost: 1
 
-#  - name: slice-1
-#    arrivals_histogram:
-#      - 0.5
-#      - 0.5
-#    server_capacity_histogram:
-#      - 0.
-#      - 1.
-#    queue_size: 2
-#    alpha: 1
-#    beta: 1
-#    gamma: 1
-#    c_job: 5
-#    c_server: 1
-#    c_lost: 10
+  - arrivals_histogram:
+      - 0.
+      - 0.
+      - 0.5
+      - 0.5
+    server_capacity_histogram:
+      - 0.
+      - 1.
+    queue_size: 1
+    alpha: 0.333
+    beta: 0.333
+    gamma: 0.333
+    c_job: 1
+    c_server: 1
+    c_lost: 1
 
-#  - name: slice-1
-#    arrivals_histogram:
-#      - 0.
-#      - 0.5
-#      - 0.5
-#    server_capacity_histogram:
-#      - 0.
-#      - 1.
-#    queue_size: 5
-#    alpha: 1
-#    beta: 1
-#    gamma: 1
-#    c_job: 5
-#    c_server: 1
-#    c_lost: 10
