--- a/src/slicing_core/config.yaml
+++ b/src/slicing_core/config.yaml
@@ -7,53 +7,83 @@ mdp:
 
 simulation:
   runs: 1
-  timeslots: 1000
+  timeslots: 10000
 
-server_max_cap: 1
+server_max_cap: 5
 
 slices:
-  - arrivals_histogram:
-      - 0.5
-      - 0.5
+  - arrivals_histogram: # urllc
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
     server_capacity_histogram:
-      - 0.
-      - 1.
-    queue_size: 1
+      - 0.3
+      - 0.35
+      - 0.35
+    queue_size: 20
     alpha: 0.333 # TODO: replace this with the old automatic system
     beta: 0.333
     gamma: 0.333
-    c_job: 1
-    c_server: 1
-    c_lost: 1
+    c_job: 0.000062
+    c_server: 0.0001
+    c_lost: 0.00062
 
-  - arrivals_histogram:
-      - 0.
-      - 0.5
-      - 0.5
+  - arrivals_histogram: # mtcm
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
+      - 0.1
     server_capacity_histogram:
-      - 0.
-      - 1.
-    queue_size: 1
+      - 0.3
+      - 0.35
+      - 0.35
+    queue_size: 20
     alpha: 0.333
     beta: 0.333
     gamma: 0.333
-    c_job: 1
-    c_server: 1
-    c_lost: 1
+    c_job: 0.0000062
+    c_server: 0.0001
+    c_lost: 0.0000062
 
-  - arrivals_histogram:
-      - 0.
-      - 0.
-      - 0.5
-      - 0.5
+  - arrivals_histogram: # emb
+      - 0.1
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
+      - 0.06
     server_capacity_histogram:
-      - 0.
-      - 1.
-    queue_size: 1
+      - 0.3
+      - 0.35
+      - 0.35
+    queue_size: 30
     alpha: 0.333
     beta: 0.333
     gamma: 0.333
-    c_job: 1
-    c_server: 1
-    c_lost: 1
+    c_job: 0.0000062
+    c_server: 0.0001
+    c_lost: 0.0000062
 
