--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
-certifi==2020.6.20
-colorama==0.4.3
-cycler==0.10.0
+PyYAML==5.3.1
+confuse==1.3.0
 graphviz==0.14.1
-kiwisolver==1.2.0
+jsons==1.3.0
 matplotlib==3.2.0rc1
 numpy==1.19.1
-Pillow==7.2.0
 pymdptoolbox==4.0b3
-pyparsing==2.4.7
-python-dateutil==2.8.1
-PyYAML==5.3.1
 scipy==1.5.2
-six==1.15.0
+typish==1.9.1
