--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ numpy==1.19.1
 pymdptoolbox==4.0b3
 scipy==1.5.2
 typish==1.9.1
+pyparsing==2.4.7
+Cycler==0.10.0
+dateutils==0.6.12
+kiwisolver==1.3.1
