--- a/src/slicing_core/config.yaml
+++ b/src/slicing_core/config.yaml
@@ -9,18 +9,16 @@ simulation:
   runs: 1
   timeslots: 1000
 
-server_max_cap: 10
+server_max_cap: 2
 
-slices: # scaling /10 /2
+slices: # Order matter! slice with index 0 is the highest priority ans so on..
   - arrivals_histogram: # emb
       - 0.1
-      - 0.3
-      - 0.3
-      - 0.3
+      - 0.9
     server_capacity_histogram:
       - 0.
       - 1.
-    queue_size: 10
+    queue_size: 2
     alpha: 0.333
     beta: 0.333
     gamma: 0.333
@@ -30,13 +28,11 @@ slices: # scaling /10 /2
 
   - arrivals_histogram: # emb
       - 0.1
-      - 0.3
-      - 0.3
-      - 0.3
+      - 0.9
     server_capacity_histogram:
       - 0.
       - 1.
-    queue_size: 10
+    queue_size: 2
     alpha: 0.333
     beta: 0.333
     gamma: 0.333
@@ -44,21 +40,21 @@ slices: # scaling /10 /2
     c_server: 1
     c_lost: 1
 
-  - arrivals_histogram: # emb
-      - 0.1
-      - 0.3
-      - 0.3
-      - 0.3
-    server_capacity_histogram:
-      - 0.
-      - 1.
-    queue_size: 10
-    alpha: 0.333
-    beta: 0.333
-    gamma: 0.333
-    c_job: 1
-    c_server: 1
-    c_lost: 1
+#  - arrivals_histogram: # emb
+#      - 0.1
+#      - 0.3
+#      - 0.3
+#      - 0.3
+#    server_capacity_histogram:
+#      - 0.
+#      - 1.
+#    queue_size: 10
+#    alpha: 0.333
+#    beta: 0.333
+#    gamma: 0.333
+#    c_job: 1
+#    c_server: 1
+#    c_lost: 1
 
 
 
