--- a/src/slicing_core/config.yaml
+++ b/src/slicing_core/config.yaml
@@ -2,7 +2,7 @@ immediate_action: True
 arrival_processing_phase: True
 
 mdp:
-  algorithm: vi
+  algorithm: fh
   discount_factor: 0.999
 
 simulation:
