new config.yaml.example

--- a/src/slicing_core/config.yaml.example
+++ b/src/slicing_core/config.yaml.example
@@ -1,42 +1,62 @@
 immediate_action: True
 arrival_processing_phase: True
 
+# mdp specific config
 mdp:
   algorithm: vi
   discount_factor: 0.999
+  # influences the state of the mdp, the policy is calculated for multiples of this number
+  # IMPORTANT: queue_size + 1 have to be divisible by queue_scaling
+  # es. queue_size=7 (+1 because of state with empty queue) -> 7+1/queue_scaling=2 OK
+  queue_scaling: 2
 
 simulation:
   runs: 1
-  timeslots: 1000
+  timeslots: 10000
 
-server_max_cap: 2
+server_max_cap: 5
 
 slices: # Order matter! slice with index 0 is the highest priority ans so on..
-
   - arrivals_histogram:
-      - 0.1
-      - 0.9
+      - 0.
+      - 0.2
+      - 0.2
+      - 0.2
+      - 0.2
+      - 0.2
     server_capacity_histogram:
       - 0.
       - 1.
-    queue_size: 2
-    alpha: 0.333
-    beta: 0.333
-    gamma: 0.333
+    queue_size: 9
+    alpha: 1
+    beta: 1
+    gamma: 1
     c_job: 1
     c_server: 1
     c_lost: 1
-
   - arrivals_histogram:
-      - 0.1
-      - 0.9
+      - 0.4
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
+      - 0.05
     server_capacity_histogram:
       - 0.
-      - 1.
-    queue_size: 2
-    alpha: 0.333
-    beta: 0.333
-    gamma: 0.333
-    c_job: 10
+      - 0.
+      - 0.5
+      - 0.5
+    queue_size: 9
+    alpha: 1
+    beta: 1
+    gamma: 1
+    c_job: 1
     c_server: 1
-    c_lost: 100
+    c_lost: 1
