added cost of allocation and deallocation

--- a/src/slicing_core/config.yaml.example
+++ b/src/slicing_core/config.yaml.example
@@ -8,110 +8,88 @@ mdp:
   # influences the state of the mdp, the policy is calculated for multiples of this number
   # IMPORTANT: queue_size + 1 have to be divisible by queue_scaling
   # es. queue_size=7 (+1 because of state with empty queue) -> 7+1/queue_scaling=2 OK
-  queue_scaling: 5
-  normalize_reward_matrix: True
+  queue_scaling: 1
+  normalize_reward_matrix: False
 
 simulation:
-  runs: 1
+  runs: 5
   timeslots: 1000
 
-server_max_cap: 10
+server_max_cap: 12
 
 slices: # Order matter! slice with index 0 is the highest priority ans so on..
   - arrivals_histogram:
-      - 0.
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
-      - 0.0625
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+      - 0.058823529411764705
+
     server_capacity_histogram:
       - 0.
       - 0.
-      - 0.
-      - 0.
-      - 0.3333333333333333
-      - 0.3333333333333333
-      - 0.3333333333333333
-    queue_size: 19
-    alpha: 10
-    beta: 1
-    gamma: 5
-    c_job: 0.1
-    c_server: 0.1
-    c_lost: 0.1
-  - arrivals_histogram:
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-      - 0.02
-    server_capacity_histogram:
-      - 0.
-      - 0.
-      - 0.3333333333333333
-      - 0.3333333333333333
-      - 0.3333333333333333
-    queue_size: 49
+      - 0.5
+      - 0.5
+
+    queue_size: 16
     alpha: 1
-    beta: 5
-    gamma: 10
-    c_job: 0.1
-    c_server: 0.1
-    c_lost: 0.1
+    beta: 1
+    gamma: 1
+    delta: 1
+    epsilon: 1
+    c_job: 0.00062
+    c_server: 9.5e-6
+    c_lost: 0.0062
+    c_alloc: 1.0e-7
+    c_dealloc: 1.0e-8
+  - arrivals_histogram:
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+      - 0.047619047619047616
+
+    server_capacity_histogram:
+      - 0.
+      - 0.5
+      - 0.5
+
+    queue_size: 100
+    alpha: 1
+    beta: 1
+    gamma: 1
+    delta: 1
+    epsilon: 1
+    c_job: 1.2e-5
+    c_server: 9.5e-6
+    c_lost: 6.2e-4
+    c_alloc: 1.0e-7
+    c_dealloc: 1.0e-8
