added pessimistic option for mdp with small queues

--- a/src/slicing_core/config.yaml.example
+++ b/src/slicing_core/config.yaml.example
@@ -3,39 +3,40 @@ arrival_processing_phase: True
 
 # mdp specific config
 mdp:
-  algorithm: rvi
-  discount_factor: 0.9
+  algorithm: vi
+  discount_factor: 0.999
   # influences the state of the mdp, the policy is calculated for multiples of this number
   # IMPORTANT: queue_size + 1 have to be divisible by queue_scaling
   # es. queue_size=7 (+1 because of state with empty queue) -> 7+1/queue_scaling=2 OK
   queue_scaling: 1
   normalize_reward_matrix: False
+  loss_expected_pessimistic = [True, False]
 
 simulation:
   runs: 5
   timeslots: 1000
 
-server_max_cap: 12
+server_max_cap: 10
 
 slices: # Order matter! slice with index 0 is the highest priority ans so on..
   - arrivals_histogram:
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
-      - 0.058823529411764705
+      - 0.038235437523048706
+      - 0.04455943847178669
+      - 0.050880363086657006
+      - 0.0569242793996905
+      - 0.0623995889364375
+      - 0.06701974377740008
+      - 0.07052785000812328
+      - 0.07272025178741215
+      - 0.07346609401888833
+      - 0.07272025178741215
+      - 0.07052785000812328
+      - 0.06701974377740008
+      - 0.0623995889364375
+      - 0.0569242793996905
+      - 0.050880363086657006
+      - 0.04455943847178669
+      - 0.038235437523048706
 
     server_capacity_histogram:
       - 0.
@@ -44,38 +45,39 @@ slices: # Order matter! slice with index 0 is the highest priority ans so on..
       - 0.5
 
     queue_size: 16
-    alpha: 1
+    alpha: 5
     beta: 1
     gamma: 1
     delta: 1
-    epsilon: 1
-    c_job: 0.00062
-    c_server: 9.5e-6
-    c_lost: 0.0062
-    c_alloc: 1.0e-7
+    epsilon: 10
+    c_job: 3.1e-5
+    c_server: 9.64e-6
+    c_lost: 3.1e-5
+    c_alloc: 9.64e-6
     c_dealloc: 1.0e-8
   - arrivals_histogram:
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
-      - 0.047619047619047616
+      - 0.023701591228799695
+      - 0.0287724904332273
+      - 0.034222698581113126
+      - 0.03988300724542148
+      - 0.045540562431451354
+      - 0.05095018082814769
+      - 0.055850866685382416
+      - 0.05998614476151323
+      - 0.06312608168657637
+      - 0.06508839492586048
+      - 0.06575596238501372
+      - 0.06508839492586048
+      - 0.06312608168657637
+      - 0.05998614476151323
+      - 0.055850866685382416
+      - 0.05095018082814769
+      - 0.045540562431451354
+      - 0.03988300724542148
+      - 0.034222698581113126
+      - 0.0287724904332273
+      - 0.023701591228799695
+
 
     server_capacity_histogram:
       - 0.
@@ -88,8 +90,8 @@ slices: # Order matter! slice with index 0 is the highest priority ans so on..
     gamma: 1
     delta: 1
     epsilon: 1
-    c_job: 1.2e-5
-    c_server: 9.5e-6
-    c_lost: 6.2e-4
-    c_alloc: 1.0e-7
+    c_job: 6.2e-6
+    c_server: 9.64e-6
+    c_lost: 6.2e-6
+    c_alloc: 9.64e-6
     c_dealloc: 1.0e-8
